# pancake-engine

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
editor/: CMakeLists.txt
editor/include/pancake_editor/: editor_session.hpp
editor/src/: editor_session.cpp
pancake/: CMakeLists.txt
pancake/include/pancake/: pancake.hpp
pancake/include/pancake/components/: 2d.hpp  3d.hpp  common.hpp  core.hpp  graphics.hpp  transform_2d.hpp  transform_3d.hpp  ui.hpp
pancake/include/pancake/core/: dispatcher.hpp  event_handler.hpp  input.hpp  renderer.hpp  session.hpp  session_access.hpp  session_config.hpp  session_wrapper.hpp  window.hpp
pancake/include/pancake/ecs/: archetype.hpp  caching_system.hpp  children_component_view.hpp  common.hpp  component_access.hpp  component_view.hpp  components.hpp  default_components.hpp  draw_system.hpp  dynamic_buffer.hpp  encompasser.hpp  encompasser_access.hpp  encompassers.hpp  logic_system.hpp  message_access.hpp  message_board.hpp  message_boards.hpp  messages.hpp  system.hpp  system_graph.hpp  world.hpp  world_wrapper.hpp
pancake/include/pancake/encompassers/: physics_state.hpp
pancake/include/pancake/gl3/: gl3_framebuffer.hpp  gl3_mesh.hpp  gl3_renderer.hpp  gl3_sdl3_window.hpp  gl3_shader.hpp  gl3_texture.hpp
pancake/include/pancake/graphics/: atlassed_texture.hpp  buffer_format.hpp  common.hpp  draw_options.hpp  framebuffer.hpp  image_atlas.hpp  light_info.hpp  material.hpp  mesh.hpp  shader.hpp  shader_input.hpp  texture.hpp  texture_filter.hpp  tileset.hpp  vertex.hpp
pancake/include/pancake/input/: gamepad.hpp  input_action.hpp  input_axis.hpp  kb_code.hpp  mouse_code.hpp
pancake/include/pancake/math/: quaternion.hpp
pancake/include/pancake/messages/: ui.hpp
pancake/include/pancake/resources/: gl3_shader_resource.hpp  resource.hpp  (+18 more)
pancake/shaders/: default_frag.glsl  default_vert.glsl  gbuffer_frag.glsl  gbuffer_vert.glsl
pancake/src/: main.cpp
pancake/src/components/: common.cpp  transform_2d.cpp  transform_3d.cpp  ui.cpp
pancake/src/core/: dispatcher.cpp  event_handler.cpp  input.cpp  renderer.cpp  session.cpp  session_access.cpp  session_config.cpp  session_wrapper.cpp  window.cpp
pancake/src/ecs/: archetype.cpp  children_component_view.cpp  component_access.cpp  component_view.cpp  components.cpp  default_components.cpp  draw_system.cpp  encompasser.cpp  encompasser_access.cpp  encompassers.cpp  logic_system.cpp  message_access.cpp  message_board.cpp  message_boards.cpp  messages.cpp  system.cpp  system_graph.cpp  world.cpp  world_wrapper.cpp
pancake/src/encompassers/: physics_state.cpp
pancake/src/gl3/: gl3_framebuffer.cpp  gl3_mesh.cpp  gl3_renderer.cpp  gl3_sdl3_window.cpp  gl3_shader.cpp  gl3_texture.cpp
pancake/src/graphics/: atlassed_texture.cpp  framebuffer.cpp  image_atlas.cpp  light_info.cpp  material.cpp  mesh.cpp  shader.cpp  shader_input.cpp  texture.cpp  tileset.cpp  vertex.cpp
pancake/src/input/: gamepad.cpp  input_action.cpp  input_axis.cpp
pancake/src/messages/: ui.cpp
pancake/src/resources/: gl3_shader_resource.cpp  gltf_mesh_resource.cpp  gltf_primitive_resource.cpp  gltf_resource.cpp  image_resource.cpp  json_resource.cpp  ldtk_resource.cpp  material_resource.cpp  obj_mesh_resource.cpp  obj_resource.cpp  quake_map_resource.cpp  resource.cpp  resources.cpp  text_resource.cpp  texture_props_resource.cpp  tileset_resource.cpp
pancake/src/sdl3/: sdl3_event_handler.cpp  sdl3_gamepad.cpp  sdl3_input.cpp  sdl3_window.cpp
pancake/src/systems/: broadcast_ui.cpp  draw_framebuffers.cpp  draw_lines_2d.cpp  draw_mesh_instances.cpp  draw_sprites.cpp  draw_texts.cpp  draw_ui.cpp  propagate_transform_3d.cpp  propagate_transforms.cpp  propagate_ui.cpp  reload_resources.cpp  simple_collision_handler.cpp  submit_camera_3d.cpp  submit_cameras.cpp  submit_framebuffers.cpp  submit_lights.cpp  submit_material_instances.cpp  update_resources.cpp
pancake/src/util/: aabb.cpp  array_type_desc.cpp  componentify_json.cpp  dynamic_buffer_type_desc.cpp  fewi.cpp  gltf_importer.cpp  guid.cpp  json.cpp  jsonify_component.cpp  ldtk_importer.cpp  notifier.cpp  primitive_type_desc.cpp  quad_tree.cpp  quake_map.cpp  struct_type_desc.cpp  type_desc.cpp  type_desc_library.cpp  type_id.cpp
(+49 files in other folders)
