cmake_minimum_required(VERSION 3.00)

project(pancake)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_library(pancake OBJECT
  src/components/common.cpp
  src/components/transform_2d.cpp
  src/components/transform_3d.cpp
  src/components/ui.cpp
  src/core/event_handler.cpp
  src/core/dispatcher.cpp
  src/core/input.cpp
  src/core/renderer.cpp
  src/core/session_access.cpp
  src/core/session_config.cpp
  src/core/session_wrapper.cpp
  src/core/session.cpp
  src/core/window.cpp
  src/ecs/archetype.cpp
  src/ecs/children_component_view.cpp
  src/ecs/component_access.cpp
  src/ecs/component_view.cpp
  src/ecs/components.cpp
  src/ecs/default_components.cpp
  src/ecs/encompasser_access.cpp
  src/ecs/encompasser.cpp
  src/ecs/encompassers.cpp
  src/ecs/draw_system.cpp
  src/ecs/logic_system.cpp
  src/ecs/message_access.cpp
  src/ecs/message_board.cpp
  src/ecs/message_boards.cpp
  src/ecs/messages.cpp
  src/ecs/system_graph.cpp
  src/ecs/system.cpp
  src/ecs/world_wrapper.cpp
  src/ecs/world.cpp
  src/encompassers/physics_state.cpp
  src/gl3/gl3_framebuffer.cpp
  src/gl3/gl3_mesh.cpp
  src/gl3/gl3_sdl3_window.cpp
  src/gl3/gl3_renderer.cpp
  src/gl3/gl3_shader.cpp
  src/gl3/gl3_texture.cpp
  src/graphics/atlassed_texture.cpp
  src/graphics/framebuffer.cpp
  src/graphics/image_atlas.cpp
  src/graphics/light_info.cpp
  src/graphics/material.cpp
  src/graphics/mesh.cpp
  src/graphics/shader_input.cpp
  src/graphics/shader.cpp
  src/graphics/texture.cpp
  src/graphics/tileset.cpp
  src/graphics/vertex.cpp
  src/input/gamepad.cpp
  src/input/input_action.cpp
  src/input/input_axis.cpp
  src/messages/ui.cpp
  src/resources/gl3_shader_resource.cpp
  src/resources/gltf_mesh_resource.cpp
  src/resources/gltf_resource.cpp
  src/resources/image_resource.cpp
  src/resources/json_resource.cpp
  src/resources/ldtk_resource.cpp
  src/resources/material_resource.cpp
  src/resources/obj_mesh_resource.cpp
  src/resources/obj_resource.cpp
  src/resources/quake_map_resource.cpp
  src/resources/resource.cpp
  src/resources/resources.cpp
  src/resources/text_resource.cpp
  src/resources/texture_props_resource.cpp
  src/resources/tileset_resource.cpp
  src/sdl3/sdl3_event_handler.cpp
  src/sdl3/sdl3_gamepad.cpp
  src/sdl3/sdl3_input.cpp
  src/sdl3/sdl3_window.cpp
  src/systems/broadcast_ui.cpp
  src/systems/draw_framebuffers.cpp
  src/systems/draw_lines_2d.cpp
  src/systems/draw_mesh_instances.cpp
  src/systems/draw_sprites.cpp
  src/systems/draw_texts.cpp
  src/systems/draw_ui.cpp
  src/systems/propagate_transform_3d.cpp
  src/systems/propagate_transforms.cpp
  src/systems/propagate_ui.cpp
  src/systems/reload_resources.cpp
  src/systems/simple_collision_handler.cpp
  src/systems/submit_camera_3d.cpp
  src/systems/submit_cameras.cpp
  src/systems/submit_framebuffers.cpp
  src/systems/submit_lights.cpp
  src/systems/submit_material_instances.cpp
  src/systems/update_resources.cpp
  src/util/aabb.cpp
  src/util/array_type_desc.cpp
  src/util/componentify_json.cpp
  src/util/dynamic_buffer_type_desc.cpp
  src/util/fewi.cpp
  src/util/gltf_importer.cpp
  src/util/guid.cpp
  src/util/json.cpp
  src/util/jsonify_component.cpp
  src/util/ldtk_importer.cpp
  src/util/notifier.cpp
  src/util/primitive_type_desc.cpp
  src/util/quad_tree.cpp
  src/util/quake_map.cpp
  src/util/struct_type_desc.cpp
  src/util/type_desc_library.cpp
  src/util/type_desc.cpp
  src/util/type_id.cpp
  src/main.cpp
)

target_include_directories(pancake PUBLIC
    ../external/gl3w/include
    ../external/imgui
    ../external/SDL/include
    ../external/stb
    ../external/tinygltf
    ../external/tinyobjloader
    ../external
    include/pancake
)

target_link_libraries(pancake
    gl3w
    imgui
    SDL3-shared
)